--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -1,9 +1,10 @@
 IMAPAccount work
 Host outlook.office365.com
 User sarath.m@tataelxsi.co.in
-PassCmd "pass Mail/outlook3"
+PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.emacs.d/.mbsyncpass.gpg"
 UseIMAPS yes
-CertificateFile /etc/ssl/certs/ca-certificates.crt
+# CertificateFile /etc/ssl/certs/ca-certificates.crt
+CertificateFile /home/teroot/cert_Common_Certificate.crt
 
 IMAPStore work-remote
 Account work
@@ -17,8 +18,8 @@ Master :work-remote:
 Slave :work-local:
 # Or include everything
 #Patterns "INBOX" "Other" "Archive" "Drafts" "Deleted Items"
-Patterns "INBOX"
-# Automatically create missing mailboxes, both locally and on the         server
+Patterns "INBOX" "*"
+# Automatically create missing mailboxes, both locally and on the server
 Create Both
 Expunge Both
 # Save the synchronization state files in the relevant directory
